src/Components/styles/Tools.css
.toolsContainer {
    grid-row: 2;
    grid-column: 6 / 12;
    text-align: center;
    margin: 2em;
}

.toolsHeader {
    text-shadow: 2px 2px #14213d;
    font-weight: bold;
    color: #fca311;
    font-size: 2em;
    margin-bottom: 1em;
}

.toolLists {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-between;
    background-color: #efefef;
    box-shadow: 2px 2px 19px 8px rgba(30, 30, 60, 0.37);
    border-radius: 15px;
    padding: 1em 2em 0 2em;
    
}

.toolSection:not(:last-child) {
    margin-right: 2em;
}

.toolListHeader {
    display: block;
    font-weight: bold;
    color: #14213d;
    font-size: 1.5em;
    font-weight: 600;
    margin-bottom: 0.5em;
    white-space: nowrap;
}

.toolList {
    margin: 0 0 1.5em;
}

.tech {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    font-size: 1.25em;
    height: 2em;
    margin-bottom: 0.5em;
}
.techLogo {
    width: 2em;
    margin-right: 0.5em;
    min-width: 2em;
}

@media only screen and (max-width: 1000px) {
    .toolsContainer{
        grid-column: 1 / span 12;
        grid-row: 4;

        margin-left: auto;
        margin-right: auto;
    }
    
}

@media only screen and (max-width: 550px) {

    .toolSection:not(:last-child) {
        margin: 0;
    }

    .tech {
        width: max-content;
        margin-left: 20%;
        margin-right: auto;
    }
    .toolLists {
        flex-direction: column;
        padding: 0;
        padding-top: 1em
    }
}

